# tiktok-mod-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: android.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: patch.keystore
android-app/app/src/main/java/com/tiktok/regionpatcher/: InstallResultReceiver.kt  MainActivity.kt  SettingsActivity.kt
android-app/app/src/main/java/com/tiktok/regionpatcher/core/: ApkDexPatcher.kt  ApkSignerHelper.kt  ApkValidator.kt  DexTelephonyPatcher.kt  InstallErrorMapper.kt  PackageInstallHelper.kt  PatchPipeline.kt  RegionConfig.kt  RegionPreferences.kt  RegionPreset.kt  TikTokDetector.kt  ZipAligner.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  item_region_preset.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/main/res/xml/: file_paths.xml
tests/: test_patcher.py  test_validation.py
tiktok_region_patcher/: __init__.py  cli.py  config.py  downloader.py  patcher.py  pipeline.py  tools.py  validation.py
