[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-region-patcher"
version = "0.1.0"
description = "Patch a TikTok APK so TelephonyManager region lookups hard-return a non-Russian region, then rebuild and re-sign it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tiktok-region-patcher = "tiktok_region_patcher.cli:main"

[tool.setuptools]
packages = ["tiktok_region_patcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
